-- Opcional: trabajar en un esquema propio
-- CREATE SCHEMA IF NOT EXISTS muchavidas;
-- SET search_path TO muchavidas, public;

-- =========================
-- TABLA: USUARIO
-- =========================
CREATE TABLE IF NOT EXISTS usuario (
  id_usuario     SERIAL PRIMARY KEY,
  correo         TEXT        NOT NULL UNIQUE,
  nombre         TEXT        NOT NULL,
  hash_clave     TEXT        NOT NULL,
  preferencias   JSONB,
  f_creacion     TIMESTAMPTZ NOT NULL DEFAULT now()
);

CREATE TABLE IF NOT EXISTS password_reset_token (
  id_password_reset SERIAL PRIMARY KEY,
  id_usuario        INT         NOT NULL,
  token_hash        TEXT        NOT NULL UNIQUE,
  expires_at        TIMESTAMPTZ NOT NULL,
  used_at           TIMESTAMPTZ,
  created_at        TIMESTAMPTZ NOT NULL DEFAULT now(),
  CONSTRAINT fk_password_reset_usuario
    FOREIGN KEY (id_usuario) REFERENCES usuario(id_usuario) ON DELETE CASCADE
);

CREATE INDEX IF NOT EXISTS idx_password_reset_user_created
  ON password_reset_token (id_usuario, created_at DESC);

CREATE INDEX IF NOT EXISTS idx_password_reset_expires
  ON password_reset_token (expires_at);

INSERT INTO usuario (correo, nombre, hash_clave, preferencias)
VALUES (
  'ejemplo@muchasvidas.com',
  'usuario',
  '$2a$10$WkQx/Io0i9F04f929zQecOZ7PcaNWVVK2t78KhCtYAEauJ8jdxTtq',
  NULL
)
ON CONFLICT (correo) DO NOTHING;

INSERT INTO usuario (correo, nombre, hash_clave, preferencias)
VALUES (
  'pablo',
  'pablo',
  '$2a$10$3g.TssYwxUf7760a.TWb8.y02H85x0iwsRnmZQXmXaIvtFAIp3.MW',
  NULL
)
ON CONFLICT (correo) DO NOTHING;

-- =========================
-- TABLA: TIPO_HABITO (catálogo)
-- =========================
CREATE TABLE IF NOT EXISTS tipo_habito (
  id_tipo_habito SERIAL PRIMARY KEY,
  nombre         TEXT NOT NULL UNIQUE,
  descripcion    TEXT
);

INSERT INTO tipo_habito (nombre, descripcion) VALUES
('Hidratación','Registro de agua ingerida'),
('Nutrición','Comidas y nutrientes'),
('Ejercicio','Actividad física'),
('Sueño','Horas de descanso'),
('Meditación','Bienestar mental')
ON CONFLICT (nombre) DO NOTHING;

-- =========================
-- TABLA: REGISTRO_HABITO
-- =========================
CREATE TABLE IF NOT EXISTS registro_habito (
  id_registro_habito SERIAL PRIMARY KEY,
  id_usuario         INT  NOT NULL,
  id_tipo_habito     INT  NOT NULL,
  f_registro         TIMESTAMPTZ NOT NULL,
  valor              NUMERIC     NOT NULL,
  unidad             TEXT,
  notas              TEXT,
  CONSTRAINT fk_registro_usuario
    FOREIGN KEY (id_usuario)     REFERENCES usuario(id_usuario)         ON DELETE CASCADE,
  CONSTRAINT fk_registro_tipo
    FOREIGN KEY (id_tipo_habito) REFERENCES tipo_habito(id_tipo_habito)
);

-- Índices recomendados (consultas por usuario/fecha y por usuario/tipo/fecha)
CREATE INDEX IF NOT EXISTS idx_registro_user_fecha
  ON registro_habito (id_usuario, f_registro);

CREATE INDEX IF NOT EXISTS idx_registro_user_tipo_fecha
  ON registro_habito (id_usuario, id_tipo_habito, f_registro);

-- =========================
-- TABLA: ALIMENTO (catalogo)
-- =========================
CREATE TABLE IF NOT EXISTS alimento (
  id_alimento         SERIAL PRIMARY KEY,
  nombre              TEXT        NOT NULL UNIQUE,
  kcal                NUMERIC     NOT NULL,
  proteina_g          NUMERIC,
  carbohidratos_g     NUMERIC,
  grasas_g            NUMERIC,
  fuente              TEXT,
  f_creacion          TIMESTAMPTZ NOT NULL DEFAULT now()
);

-- =========================
-- TABLA: REGISTRO_COMIDA
-- =========================
CREATE TABLE IF NOT EXISTS registro_comida (
  id_registro_comida  SERIAL PRIMARY KEY,
  id_usuario          INT         NOT NULL,
  f_registro          TIMESTAMPTZ NOT NULL,
  tipo_comida         TEXT        NOT NULL CHECK (tipo_comida IN ('DESAYUNO','ALMUERZO','CENA','SNACK')),
  id_alimento         INT,
  nombre_snapshot     TEXT        NOT NULL,
  kcal                NUMERIC     NOT NULL,
  proteina_g          NUMERIC,
  carbohidratos_g     NUMERIC,
  grasas_g            NUMERIC,
  CONSTRAINT fk_registro_comida_usuario
    FOREIGN KEY (id_usuario) REFERENCES usuario(id_usuario) ON DELETE CASCADE,
  CONSTRAINT fk_registro_comida_alimento
    FOREIGN KEY (id_alimento) REFERENCES alimento(id_alimento) ON DELETE SET NULL
);

CREATE INDEX IF NOT EXISTS idx_registro_comida_user_fecha
  ON registro_comida (id_usuario, f_registro);

CREATE INDEX IF NOT EXISTS idx_registro_comida_user_tipo_fecha
  ON registro_comida (id_usuario, tipo_comida, f_registro);

-- Relacion opcional para ligar registro_comida con el habito de nutricion.
ALTER TABLE registro_habito
  ADD COLUMN IF NOT EXISTS id_registro_comida INT;

DO $$
BEGIN
  IF NOT EXISTS (
    SELECT 1
      FROM pg_constraint
     WHERE conname = 'fk_registro_habito_comida'
  ) THEN
    ALTER TABLE registro_habito
      ADD CONSTRAINT fk_registro_habito_comida
      FOREIGN KEY (id_registro_comida)
      REFERENCES registro_comida(id_registro_comida)
      ON DELETE CASCADE;
  END IF;
END $$;

INSERT INTO alimento (nombre, kcal, proteina_g, carbohidratos_g, grasas_g, fuente)
VALUES
  ('Avena con frutas', 320, 10, 54, 7, 'seed'),
  ('Pechuga de pollo', 180, 34, 0, 4, 'seed'),
  ('Ensalada mixta', 250, 7, 18, 14, 'seed'),
  ('Yogur griego natural', 140, 15, 7, 5, 'seed'),
  ('Sandwich integral de pavo', 340, 24, 36, 10, 'seed'),
  ('Tostadas con aguacate', 280, 8, 26, 16, 'seed'),
  ('Arroz con verduras', 410, 9, 70, 9, 'seed'),
  ('Salmon al horno', 360, 30, 4, 22, 'seed'),
  ('Lentejas guisadas', 390, 19, 52, 9, 'seed'),
  ('Omelette de claras', 220, 24, 4, 9, 'seed'),
  ('Batido de proteina', 210, 27, 14, 3, 'seed'),
  ('Frutos secos mixtos', 190, 6, 7, 16, 'seed')
ON CONFLICT (nombre) DO NOTHING;

-- =========================
-- TABLA: LOGRO
-- =========================
CREATE TABLE IF NOT EXISTS logro (
  id_logro     SERIAL PRIMARY KEY,
  nombre       TEXT NOT NULL UNIQUE,
  descripcion  TEXT,
  criterio     JSONB,         -- o TEXT si prefieres
  puntos       INT  NOT NULL DEFAULT 0
);

ALTER TABLE logro
  ADD COLUMN IF NOT EXISTS codigo TEXT;

ALTER TABLE logro
  ADD COLUMN IF NOT EXISTS icono TEXT;

ALTER TABLE logro
  ADD COLUMN IF NOT EXISTS dificultad INT NOT NULL DEFAULT 0;

ALTER TABLE logro
  ADD COLUMN IF NOT EXISTS prioridad_compartir INT NOT NULL DEFAULT 0;

CREATE UNIQUE INDEX IF NOT EXISTS uq_logro_codigo
  ON logro (codigo)
  WHERE codigo IS NOT NULL;

-- =========================
-- TABLA: USUARIO_LOGRO
-- =========================
CREATE TABLE IF NOT EXISTS usuario_logro (
  id_usuario_logro SERIAL PRIMARY KEY,
  id_usuario       INT NOT NULL,
  id_logro         INT NOT NULL,
  f_obtencion      TIMESTAMPTZ NOT NULL DEFAULT now(),
  puntos           INT NOT NULL DEFAULT 0,
  CONSTRAINT fk_usuario_logro_usuario
    FOREIGN KEY (id_usuario) REFERENCES usuario(id_usuario) ON DELETE CASCADE,
  CONSTRAINT fk_usuario_logro_logro
    FOREIGN KEY (id_logro)   REFERENCES logro(id_logro),
  CONSTRAINT uq_usuario_logro UNIQUE (id_usuario, id_logro)
);

-- =========================
-- TABLA: RETO
-- =========================
CREATE TABLE IF NOT EXISTS reto (
  id_reto     SERIAL PRIMARY KEY,
  nombre      TEXT NOT NULL UNIQUE,
  descripcion TEXT,
  objetivo    JSONB,
  f_inicio    TIMESTAMPTZ,
  f_fin       TIMESTAMPTZ
);

-- =========================
-- TABLA: USUARIO_RETO
-- =========================
-- Nota: puedes convertir "estado" en ENUM nativo de PostgreSQL si lo deseas.
-- Aquí lo dejamos con CHECK para no depender de tipos globales.
CREATE TABLE IF NOT EXISTS usuario_reto (
  id_usuario_reto SERIAL PRIMARY KEY,
  id_usuario      INT NOT NULL,
  id_reto         INT NOT NULL,
  estado          TEXT NOT NULL CHECK (estado IN ('inscrito','en_curso','completado','cancelado')),
  progreso        NUMERIC NOT NULL DEFAULT 0,
  f_inscripcion   TIMESTAMPTZ NOT NULL DEFAULT now(),
  CONSTRAINT fk_usuario_reto_usuario
    FOREIGN KEY (id_usuario) REFERENCES usuario(id_usuario) ON DELETE CASCADE,
  CONSTRAINT fk_usuario_reto_reto
    FOREIGN KEY (id_reto)    REFERENCES reto(id_reto),
  CONSTRAINT uq_usuario_reto UNIQUE (id_usuario, id_reto)
);

-- =========================
-- TABLA: RECORDATORIO (LEGACY)
-- =========================
-- Se conserva por compatibilidad historica, pero en el MVP actual
-- la configuracion operativa de avisos vive en usuario.preferencias.notificaciones.
CREATE TABLE IF NOT EXISTS recordatorio (
  id_recordatorio SERIAL PRIMARY KEY,
  id_usuario      INT NOT NULL,
  id_tipo_habito  INT NOT NULL,
  programacion    JSONB NOT NULL,           -- hora, frecuencia, días de semana, etc.
  activo          BOOLEAN NOT NULL DEFAULT TRUE,
  f_creacion      TIMESTAMPTZ NOT NULL DEFAULT now(),
  CONSTRAINT fk_recordatorio_usuario
    FOREIGN KEY (id_usuario)     REFERENCES usuario(id_usuario)         ON DELETE CASCADE,
  CONSTRAINT fk_recordatorio_tipo
    FOREIGN KEY (id_tipo_habito) REFERENCES tipo_habito(id_tipo_habito)
);

-- =========================
-- TABLA: NOTIFICACION (histórico)
-- =========================
CREATE TABLE IF NOT EXISTS notificacion (
  id_notificacion SERIAL PRIMARY KEY,
  id_usuario      INT NOT NULL,
  titulo          TEXT NOT NULL,
  cuerpo          TEXT NOT NULL,
  tipo            TEXT NOT NULL DEFAULT 'SYSTEM' CHECK (tipo IN ('REMINDER','ACHIEVEMENT','CHALLENGE','SYSTEM')),
  leida           BOOLEAN NOT NULL DEFAULT FALSE,
  f_leida         TIMESTAMPTZ,
  f_programada    TIMESTAMPTZ,
  f_envio         TIMESTAMPTZ,
  estado          TEXT NOT NULL CHECK (estado IN ('programada','enviada','fallida')),
  metadatos       JSONB,
  deep_link       TEXT,
  created_at      TIMESTAMPTZ NOT NULL DEFAULT now(),
  updated_at      TIMESTAMPTZ NOT NULL DEFAULT now(),
  CONSTRAINT fk_notificacion_usuario
    FOREIGN KEY (id_usuario) REFERENCES usuario(id_usuario) ON DELETE CASCADE
);

-- Índice útil para planificaciones/consultas por usuario y fecha
CREATE INDEX IF NOT EXISTS idx_notificacion_user_programada
  ON notificacion (id_usuario, f_programada);

CREATE INDEX IF NOT EXISTS idx_notificacion_user_created
  ON notificacion (id_usuario, created_at);

-- Tabla disponible para una futura capa push.
-- En el MVP actual no hay flujo operativo completo con expo_push_token.
CREATE TABLE IF NOT EXISTS user_device (
  id_user_device SERIAL PRIMARY KEY,
  id_usuario INT NOT NULL,
  platform TEXT NOT NULL,
  expo_push_token TEXT NOT NULL,
  created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  last_seen_at TIMESTAMPTZ,
  CONSTRAINT fk_user_device_usuario
    FOREIGN KEY (id_usuario) REFERENCES usuario(id_usuario) ON DELETE CASCADE
);

ALTER TABLE notificacion ADD COLUMN IF NOT EXISTS tipo TEXT NOT NULL DEFAULT 'SYSTEM';
ALTER TABLE notificacion ADD COLUMN IF NOT EXISTS leida BOOLEAN NOT NULL DEFAULT FALSE;
ALTER TABLE notificacion ADD COLUMN IF NOT EXISTS f_leida TIMESTAMPTZ;
ALTER TABLE notificacion ADD COLUMN IF NOT EXISTS deep_link TEXT;
ALTER TABLE notificacion ADD COLUMN IF NOT EXISTS created_at TIMESTAMPTZ NOT NULL DEFAULT now();
ALTER TABLE notificacion ADD COLUMN IF NOT EXISTS updated_at TIMESTAMPTZ NOT NULL DEFAULT now();

CREATE TABLE IF NOT EXISTS ticket_soporte (
  id_ticket SERIAL PRIMARY KEY,
  id_usuario INT NOT NULL,
  asunto TEXT NOT NULL,
  descripcion TEXT NOT NULL,
  tipo TEXT NOT NULL CHECK (tipo IN ('consulta', 'bug')),
  estado TEXT NOT NULL DEFAULT 'abierto' CHECK (estado IN ('abierto', 'cerrado')),
  contacto_email TEXT,
  f_creacion TIMESTAMPTZ NOT NULL DEFAULT now(),
  CONSTRAINT fk_ticket_soporte_usuario
    FOREIGN KEY (id_usuario) REFERENCES usuario(id_usuario) ON DELETE CASCADE
);
