@startuml
hide circle
hide methods
hide stereotypes

skinparam backgroundColor #F8FAFC
skinparam shadowing false
skinparam roundcorner 10
skinparam defaultFontName Segoe UI
skinparam defaultFontSize 11
skinparam ArrowColor #5B7083
skinparam ArrowThickness 1
skinparam packageStyle rectangle
skinparam packageBorderColor #9FB3C8
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #6E879D
skinparam noteBackgroundColor #FFF9E6
skinparam noteBorderColor #D7C58A
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 75
skinparam ranksep 45

title Capítulo 5 - Detalle relacional de gamificación, avisos y soporte

left to right direction

legend right
|= Estado |= Lectura |
|<#FFFFFF> Operativo actual | Tablas usadas en los flujos principales |
|<#EEF2F7> Evolución futura | Base disponible para ampliaciones futuras |
endlegend

package "Usuario de referencia" #EAF2FF {
  together {
    entity "usuario" as usuario {
      * id_usuario : SERIAL <<PK>>
      --
      * correo : TEXT <<UQ>>
      * nombre : TEXT
      preferencias : JSONB
      * f_creacion : TIMESTAMPTZ
    }

  }
}

note right of usuario
preferencias.notificaciones actúa como
fuente canónica de la configuración
operativa de avisos.
end note

package "Gamificación" #F4EEFF {
  together {
    entity "logro" as logro {
      * id_logro : SERIAL <<PK>>
      --
      codigo : TEXT <<UQ>>
      * nombre : TEXT <<UQ>>
      descripcion : TEXT
      criterio : JSONB
      icono : TEXT
      * puntos : INT
      * dificultad : INT
      * prioridad_compartir : INT
    }

    entity "usuario_logro" as usuario_logro {
      * id_usuario_logro : SERIAL <<PK>>
      --
      * id_usuario : INT <<FK>>
      * id_logro : INT <<FK>>
      * f_obtencion : TIMESTAMPTZ
      * puntos : INT
      uq_usuario_logro : UNIQUE (id_usuario, id_logro)
    }

    entity "reto" as reto #EEF2F7 {
      * id_reto : SERIAL <<PK>>
      --
      * nombre : TEXT <<UQ>>
      objetivo : JSONB
      f_inicio : TIMESTAMPTZ
      f_fin : TIMESTAMPTZ
    }

    entity "usuario_reto" as usuario_reto #EEF2F7 {
      * id_usuario_reto : SERIAL <<PK>>
      --
      * id_usuario : INT <<FK>>
      * id_reto : INT <<FK>>
      * estado : TEXT <<CHECK>>
      * progreso : NUMERIC
      * f_inscripcion : TIMESTAMPTZ
      uq_usuario_reto : UNIQUE (id_usuario, id_reto)
    }
  }
}

note bottom of reto
Base relacional disponible para retos futuros.
No existe modulo operativo actual de retos
en la API ni en la interfaz principal.
end note

package "Dispositivos y evolución" #EAF7EA {
  together {
    entity "user_device" as user_device #EEF2F7 {
      * id_user_device : SERIAL <<PK>>
      --
      * id_usuario : INT <<FK>>
      * platform : TEXT
      * expo_push_token : TEXT
      * created_at : TIMESTAMPTZ
      last_seen_at : TIMESTAMPTZ
    }
  }
}

note bottom of user_device
Reservado para una futura capa push.
Sin flujo operativo completo en el MVP.
end note

package "Histórico y soporte" #FFF5E8 {
  together {
    entity "notificacion" as notificacion {
      * id_notificacion : SERIAL <<PK>>
      --
      * id_usuario : INT <<FK>>
      * titulo : TEXT
      * cuerpo : TEXT
      * tipo : TEXT <<CHECK>>
      * estado : TEXT <<CHECK>>
      * leida : BOOLEAN
      f_leida : TIMESTAMPTZ
      f_programada : TIMESTAMPTZ
      f_envio : TIMESTAMPTZ
      metadatos : JSONB
      deep_link : TEXT
      * created_at : TIMESTAMPTZ
      * updated_at : TIMESTAMPTZ
    }

    entity "ticket_soporte" as ticket_soporte {
      * id_ticket : SERIAL <<PK>>
      --
      * id_usuario : INT <<FK>>
      * asunto : TEXT
      * descripcion : TEXT
      * tipo : TEXT <<CHECK>>
      * estado : TEXT <<CHECK>>
      contacto_email : TEXT
      * f_creacion : TIMESTAMPTZ
    }
  }
}

note bottom of notificacion
Persistencia operativa del histórico de eventos y avisos.
No existe FK directa hacia logro o reto;
la relación se expresa mediante tipo y metadatos.
end note

usuario ||--o{ usuario_logro
logro ||--o{ usuario_logro
usuario ||--o{ usuario_reto
reto ||--o{ usuario_reto
usuario ||--o{ user_device
usuario ||--o{ notificacion
usuario ||--o{ ticket_soporte

usuario_logro -[hidden]-> user_device
reto -[hidden]-> user_device
user_device -[hidden]-> ticket_soporte

@enduml
